2023-09-03T00:37:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6061404678 # 1157
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-03
* notice: last 14d: unq all: 4 4142
* notice: prev accum: outdated-unq outdated-all / unq all: 1654 154217 / 1684 158617
* notice: next accum: outdated-unq outdated-all / unq all: 1656 154519 / 1684 158710
* notice: prev exec diff / last date diff / accum: unq all: +0 +93 -0 -49 / +2 +301 -0 -0 / 2 301
* notice: removed / changed dates: [2023-08-19] / [2023-08-20 2023-09-02]

2023-09-02T16:08:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6059291601 # 1156
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-02
* notice: last 14d: unq all: 4 4138
* notice: prev accum: outdated-unq outdated-all / unq all: 1654 154217 / 1684 158521
* notice: next accum: outdated-unq outdated-all / unq all: 1654 154217 / 1684 158617
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -0 -93 / +2 +208 -0 -0 / 2 208
* notice: removed / changed dates: [] / [2023-08-19 2023-09-02]

2023-09-02T08:09:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6057239645 # 1155
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-02
* notice: last 14d: unq all: 4 4135
* notice: prev accum: outdated-unq outdated-all / unq all: 1654 154217 / 1682 158409
* notice: next accum: outdated-unq outdated-all / unq all: 1654 154217 / 1684 158521
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -1 -113 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-08-19 2023-09-02]

2023-09-02T00:34:22Z: