@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-09-03T00:37:57Z",
+  "timestamp" : "2023-09-03T08:08:58Z",
   "count_outdated" : 154519,
   "uniques_outdated" : 1656,
-  "count" : 158710,
-  "uniques" : 1684,
+  "count" : 158822,
+  "uniques" : 1686,
   "clones" : [
     {
       "timestamp": "2023-08-20T00:00:00Z",
-      "count": 249,
+      "count": 133,
       "count_minmax": [ 110, 298 ],
-      "count_decinc": [ 49, 298 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count_decinc": [ 165, 298 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-08-21T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 301,
       "count_minmax": [ 112, 301 ],
       "count_decinc": [ 0, 301 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-09-03T00:00:00Z",
+      "count": 112,
+      "count_minmax": [ 112, 112 ],
+      "count_decinc": [ 0, 112 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
