@@ -1,11 +1,11 @@
 {
-  "count": 4142,
+  "count": 4138,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2023-08-20T00:00:00Z",
-      "count": 249,
-      "uniques": 2
+      "count": 133,
+      "uniques": 1
     },
     {
       "timestamp": "2023-08-21T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2023-09-02T00:00:00Z",
       "count": 301,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2023-09-03T00:00:00Z",
+      "count": 112,
       "uniques": 2
     }
   ]
